--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 </section>
 
+<canvas id = 'chart' width="300" height="300"></canvas>
 <button id="button" type="button" onclick="getResult(event)">Git Result </button>
 
 <div id="list"></div>
@@ -48,6 +49,7 @@
 
 
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0 "></script>
     <script src="js/app.js"></script>
 </body>
 </html>
